@@ -29,7 +29,7 @@
  % Add STK subdirectories to the path
  stk_init__addpath (root);
  
-@@ -297,211 +282,6 @@
+@@ -300,225 +285,6 @@
  
  end % function
  
@@ -135,8 +135,11 @@
 -
 -gcc_version_warning = [];
 -isoctave = (exist ('OCTAVE_VERSION', 'builtin') == 5);
--use_silent = (~ isoctave) && ...  % Matlab-only:
--    (~ isempty (strfind (help ('mex'), '-silent')));
+-
+-persistent use_silent
+-if isoctave && (isempty (use_silent))
+-    use_silent = false;
+-end
 -
 -if compile
 -    
@@ -154,12 +157,23 @@
 -        else
 -            warning_state = warning ('off', 'MATLAB:mex:GccVersion_link');
 -            lastwarn ('');
--            if use_silent
--                % -silent is only supported in recent versions of Mtlab
+-            
+-            if isempty (use_silent)
+-                % Try with -silent (only supported in recent versions of Matlab)
+-                try
+-                    mex ('-silent', src_files{:}, include);
+-                    use_silent = true;
+-                catch
+-                    % Try without -silent
+-                    mex (src_files{:}, include);
+-                    use_silent = false;
+-                end
+-            elseif use_silent
 -                mex ('-silent', src_files{:}, include);
 -            else
 -                mex (src_files{:}, include);
 -            end
+-            
 -            [lastmsg, lastid] = lastwarn ();
 -            if strfind (lastid, 'GccVersion')
 -                gcc_version_warning.msg = lastmsg;
